--- a/src/App.sass
+++ b/src/App.sass
@@ -6,15 +6,18 @@
 
 // !TODO: fix positioning on input/submit and total
 
+.App
+	height: 100vh
+
 .active
 	color: red
 	font-size: 30px
 
 .form-wrapper
-	position: fixed
-	left: 50%
-	margin-left: -100px
-	top: 0
+	// position: fixed
+	// left: 50%
+	// margin-left: -100px
+	// top: 0
 
 .main-AET-form
 	display: flex
@@ -42,13 +45,14 @@
 
 .list-wrapper
 	text-align: center
-	margin-top: 144px
+	overflow-y: scroll
+
+	// margin-top: 144px
 
 .list
 	list-style: none
 	display: inline-block
 	width: 100%
-	margin-bottom: 15px
 
 .list-item
 	text-align: center
@@ -57,8 +61,10 @@
 	// position: fixed
 	// bottom: 0
 	// left: 50%
-	// margin-left: -100px
-	background-color: white
+	// margin-left: -200px
+	// width: 400px
+	// background-color: white
+	margin-top: 10px
 	padding-bottom: 15px
 
 .time-total
@@ -72,7 +78,8 @@
 // Overide previous styles
 .App
 	display: grid
-	grid-auto-rows: minmax(140px, auto)
+	grid-template-columns: auto
+	grid-template-rows: 122px auto 210px
 
 .form-wrapper
 	grid-column: 1
@@ -80,8 +87,8 @@
 
 .list-wrapper
 	grid-column: 1
-	grid-row: 2/3
+	grid-row: 2
 
 .total-input-wrapper
 	grid-column: 1
-	grid-row: 4
+	grid-row: 3
