--- a/src/App.sass
+++ b/src/App.sass
@@ -44,7 +44,6 @@
 	display: inline-block
 
 .list-wrapper
-	text-align: center
 	overflow-y: scroll
 
 	// margin-top: 144px
@@ -56,16 +55,24 @@
 
 .list-item
 	text-align: center
+	display: grid
+	grid-template-columns: 30% auto 30%
+	grid-template-rows: 100%
+
+.li-time
+	margin-left: 10px
+	display: flex
+	align-items: center
+	justify-content: center
+	font-size: 10px
+
+.li-aet
+	display: block
 
 .total-input-wrapper
-	// position: fixed
-	// bottom: 0
-	// left: 50%
-	// margin-left: -200px
-	// width: 400px
-	// background-color: white
 	margin-top: 10px
 	padding-bottom: 15px
+
 
 .time-total
 	text-align: center
